--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AplikasiPerhitunganHari
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AplikasiPerhitunganHari
-main.class=aplikasiperhitunganhari.AplikasiPerhitunganHari
+main.class=Tugas4
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
